--- a/FibPseudoprime.cabal
+++ b/FibPseudoprime.cabal
@@ -33,6 +33,7 @@ library
       src
   build-depends:
       HaskellForMaths
+    , arithmoi
     , base >=4.7 && <5
   default-language: Haskell2010
 
@@ -46,6 +47,7 @@ executable FibPseudoprime-exe
   build-depends:
       FibPseudoprime
     , HaskellForMaths
+    , arithmoi
     , base >=4.7 && <5
   default-language: Haskell2010
 
@@ -60,5 +62,6 @@ test-suite FibPseudoprime-test
   build-depends:
       FibPseudoprime
     , HaskellForMaths
+    , arithmoi
     , base >=4.7 && <5
   default-language: Haskell2010
