--- a/FibPseudoprime.cabal
+++ b/FibPseudoprime.cabal
@@ -7,11 +7,11 @@ cabal-version: 1.12
 name:           FibPseudoprime
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/FibPseudoprime#readme>
-homepage:       https://github.com/githubuser/FibPseudoprime#readme
-bug-reports:    https://github.com/githubuser/FibPseudoprime/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2021 Author name here
+homepage:       https://github.com/ensj/FibPseudoprime#readme
+bug-reports:    https://github.com/ensj/FibPseudoprime/issues
+author:         ensj, smashalkar
+maintainer:     ensjtrans@gmail.com
+copyright:      2021 ensjtrans
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/FibPseudoprime
+  location: https://github.com/ensj/FibPseudoprime
 
 library
   exposed-modules:
@@ -33,8 +33,10 @@ library
       src
   build-depends:
       HaskellForMaths
+    , QuickCheck
     , arithmoi
     , base >=4.7 && <5
+    , hspec
   default-language: Haskell2010
 
 executable FibPseudoprime-exe
@@ -47,8 +49,10 @@ executable FibPseudoprime-exe
   build-depends:
       FibPseudoprime
     , HaskellForMaths
+    , QuickCheck
     , arithmoi
     , base >=4.7 && <5
+    , hspec
   default-language: Haskell2010
 
 test-suite FibPseudoprime-test
@@ -62,6 +66,8 @@ test-suite FibPseudoprime-test
   build-depends:
       FibPseudoprime
     , HaskellForMaths
+    , QuickCheck
     , arithmoi
     , base >=4.7 && <5
+    , hspec
   default-language: Haskell2010
