--- a/FibPseudoprime.cabal
+++ b/FibPseudoprime.cabal
@@ -37,6 +37,7 @@ library
     , arithmoi
     , base >=4.7 && <5
     , hspec
+    , timeit
   default-language: Haskell2010
 
 executable FibPseudoprime-exe
@@ -53,6 +54,7 @@ executable FibPseudoprime-exe
     , arithmoi
     , base >=4.7 && <5
     , hspec
+    , timeit
   default-language: Haskell2010
 
 test-suite FibPseudoprime-test
@@ -70,4 +72,5 @@ test-suite FibPseudoprime-test
     , arithmoi
     , base >=4.7 && <5
     , hspec
+    , timeit
   default-language: Haskell2010
