--- a/FibPseudoprime.cabal
+++ b/FibPseudoprime.cabal
@@ -36,8 +36,8 @@ library
     , QuickCheck
     , arithmoi
     , base >=4.7 && <5
+    , criterion
     , hspec
-    , timeit
   default-language: Haskell2010
 
 executable FibPseudoprime-exe
@@ -53,8 +53,8 @@ executable FibPseudoprime-exe
     , QuickCheck
     , arithmoi
     , base >=4.7 && <5
+    , criterion
     , hspec
-    , timeit
   default-language: Haskell2010
 
 test-suite FibPseudoprime-test
@@ -71,6 +71,6 @@ test-suite FibPseudoprime-test
     , QuickCheck
     , arithmoi
     , base >=4.7 && <5
+    , criterion
     , hspec
-    , timeit
   default-language: Haskell2010
